<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_balance"
        android:title="@string/action_account_balance"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send_money"
        android:icon="@drawable/ic_dollar_24"
        android:title="@string/action_transfer_money"
        app:showAsAction="never" />

    <!--<item
        android:icon="@drawable/ic_receipt_24"
        android:title="@string/action_pay_bills"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_prices"
        android:icon="@drawable/ic_assignment_24"
        android:title="@string/action_prices"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
