<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pricing_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pricing_item_background"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:focusable="true"
    android:minHeight="56dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:descendantFocusability="beforeDescendants"
        android:paddingBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintEnd_toStartOf="@+id/expanded_menu"
            app:layout_constraintStart_toEndOf="@+id/avatar_image"
            app:layout_constraintTop_toTopOf="@+id/avatar_image"
            tools:text="YUP By Société Générale" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/expanded_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.9"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:tint="@color/expand_drawable"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_expand_more_24" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_image"
            tools:visibility="visible">

            <TableLayout
                android:id="@+id/row_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_result_header"
                    android:divider="?attr/dividerHorizontal"
                    android:gravity="center"
                    android:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/colorPrimary"
                        android:singleLine="true"
                        android:text="@string/pricing_line_header_from"
                        android:textAlignment="center"
                        android:textColor="@color/result_header"
                        android:textStyle="bold"
                        app:autoSizePresetSizes="@array/autosize_text_sizes"
                        app:autoSizeTextType="uniform" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/colorPrimary"
                        android:singleLine="true"
                        android:text="@string/pricing_line_header_to"
                        android:textAlignment="center"
                        android:textColor="@color/result_header"
                        android:textStyle="bold"
                        app:autoSizePresetSizes="@array/autosize_text_sizes"
                        app:autoSizeTextType="uniform" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/colorPrimary"
                        android:singleLine="true"
                        android:text="@string/pricing_line_header_fees"
                        android:textAlignment="center"
                        android:textColor="@color/result_header"
                        android:textStyle="bold"
                        app:autoSizePresetSizes="@array/autosize_text_sizes"
                        app:autoSizeTextType="uniform" />
                </TableRow>
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>